| Bug #25877 | After DROP INDEX non-indexed data isn't moved from memory into tablespace | ||
|---|---|---|---|
| Submitted: | 26 Jan 2007 18:37 | Modified: | 23 Mar 2007 11:31 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: ClusterDD | Severity: | S3 (Non-critical) |
| Version: | 5.1.15-bk | OS: | Linux (Linux FC4 64bit) |
| Assigned to: | Bugs System | Target Version: | |
[26 Jan 2007 18:37]
Serge Kozlov
[5 Mar 2007 12:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21140 ChangeSet@1.2441, 2007-03-05 19:14:56+08:00, Justin.He@dev3-240.dev.cn.tlan +1 -0 BUG#25877, After DROP INDEX non-indexed data isn't moved from memory into tablespace
[22 Mar 2007 21:06]
Mads Martin Joergensen
Fixed in 5.1.17
[23 Mar 2007 11:31]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.17 and ndb-6.1.6 changelogs.
