BUG#25877, After DROP INDEX non-indexed data isn't moved from memory into tablespace